// REACT
import * as React from 'react';
import * as renderer from 'react-test-renderer';
// COMPONENT
import ResultsContainer from './ResultsContainer.component';
// ENZYME
import { shallow, mount } from 'enzyme';

// TEST SETUP
const subject = (
    <ResultsContainer
        term="a"
        emitSelectedItem={() => true}
        emitActiveTerm={() => true}
        dataSource={[]}
    />
);
const wrapper = mount(subject);
const component = shallow(subject);

describe('Component: ResultsContainer', () => {
    it('should be defined', () => {
        /* tslint:disable */
        console.log(subject);
        console.log(wrapper.debug());
        console.log(component.debug());

        /* tslint:enable */
        expect(subject).toBeDefined();
        expect(wrapper).toBeDefined();
        expect(component).toBeDefined();
        const tree = renderer.create(subject).toJSON();

        expect(tree).toMatchSnapshot();
    });
});
